--- a/archetype/site/html/index.html
+++ b/archetype/site/html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="../static/css/site.css">
   </head>
   <body>
     <h1>Привет Мир</h1>
